--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,8 @@
 // Vars
 $font-stack: "Open Sans", sans-serif;
+$font-color: black;
+$a-hover-color: darkblue;
+$header-text-color: white;
 $main-color: lightblue;
 $main-color-dark: black;
 $heading-color: orange;
@@ -7,10 +10,17 @@ $heading-color: orange;
 p {
 	font-size: 15px;
 	line-height: 1.64;
+	color: $font-color;
 }
 
 body {
     background-color: $main-color;
+    margin: 0;
+    overflow-x: hidden;
+}
+
+ul {
+	padding: 0;
 }
 
 .flex-container {
@@ -18,6 +28,7 @@ body {
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
+   width: 100%;
 
    &__centered {
 	   -webkit-align-items: center;
@@ -30,6 +41,24 @@ body {
 		-webkit-flex-direction: row;
 	   flex-direction: row;
 	}
+}
+
+.header-text {
+	position: absolute;
+	top: 0;
+	width: 100%;
+
+	p {
+		color: $header-text-color;
+		font-family: $font-stack;
+		font-size: 75px;
+		margin: 0;
+	}
+}
+
+.location:before {
+	font-family: FontAwesome;
+	content: "\f041\ ";
 }
 
 .content {
@@ -71,7 +100,7 @@ body {
 	}
 }
 
-.experience-list-title {
+.list-title {
 	color: $heading-color;
 }
 
@@ -86,4 +115,71 @@ body {
 		flex-basis: 67%;
 		order: 2;
 	}
+}
+
+.abilities-section {
+	justify-content: space-between;
+}
+
+.abilities-list {
+	flex-wrap: wrap;
+    align-items: stretch;
+    width: 45%;
+}
+
+.abillity-item {
+}
+
+.ability-name {
+	flex: 3;
+	margin: 0;
+}
+
+.ability-stars {
+	flex: 1;
+	justify-content: flex-end !important;
+}
+
+.contact-list {
+	a:link {
+		color: $font-color;
+		text-decoration: none;
+	}
+
+	a:visited {
+		color: $font-color;
+		text-decoration: none;
+	}
+
+	a:hover {
+	    color: $a-hover-color;
+	    text-decoration: none;
+	}
+
+	a:active {
+	    color: $font-color;
+	    text-decoration: none;
+	}
+}
+
+.contact-item {
+	width: 5%;
+}
+
+.linkedin:before {
+	font-family: FontAwesome;
+	font-size: 40px;
+	content: "\f08c\ ";
+}
+
+.mail:before {
+	font-family: FontAwesome;
+	font-size: 40px;
+	content: "\f0e0\ ";
+}
+
+.github:before {
+	font-family: FontAwesome;
+	font-size: 40px;
+	content: "\f092\ ";
 }
